hello_gke_extlb_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gke-ing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-gke-ing
  template:
    metadata:
      labels:
        app: hello-gke-ing
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.5
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-extlb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-gke-extlb


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-gke-ing
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-gke-ing
          servicePort: 80
