hello_gke_ing_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gke-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: hello-gke-ing
            port:
              number: 80
